# OpenGLLearning

./: .clang-format  .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
cmake/: CPM.cmake
fuzz_test/: fuzz_tester.cpp
glsl/: baseVertexShader.vert.glsl  newBaseVertexShader.vert.glsl  redFragmentShader.frag.glsl
include/glad/: glad.h
include/shape/: Buffer.hpp  Circle.hpp  Color.hpp  Drawer.hpp  Errors.hpp  Point.hpp  Position.hpp  Rectangle.hpp  Shader.hpp  Triangle.hpp  Vector.hpp  VertexArray.hpp  VertexBuffer.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp  vertex.hpp
src/glad/: CMakeLists.txt  glad.c
src/main/: CMakeLists.txt  main.cpp  vertex.hpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/shape/: CMakeLists.txt  Circle.hpp  Position.hpp  Shape.cpp
